2002-01-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c (display_row_data): on the client side, we use
	GdaRecordset's, not GdaServerRecordset's

2002-01-08  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* client.c (show_schema()): changed value to be const.
	(do_postgres_test()):
	(display_row_data()):
	(open_connection()): new test specific to the postgres provider.

2002-01-02  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* client.c: also lists procedures and views (if any). Shows the number
	of procedures, tables, types and views.
	
2001-12-30  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c (show_schemas): added types schema

2001-12-28  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c (show_schemas): new function for showing database schema
	objects from the tested connections

2001-12-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c: added gda_connection_supports test

	* gda-xmldb-test.c: removed. All tests will be in gda-test

2001-11-20  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* client.c: added rollback test.

2001-11-07  Rodrigo Moya <rodrigo@gnome-db.org>

	* models.c (test_array_model): GdaDataModelArray test

	* value.c: GdaValue tests

2001-11-04  Rodrigo Moya <rodrigo@gnome-db.org>

	* client.c: basic client API test

	* config.c (list_data_sources): added data source configuration
	API test

2001-11-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* models.c: GDA data models test suite

	* gda-test.c: re-started, to be more a test suite than a simple
	test program

	* config.c: GDA configuration API test suite
	(list_all_sections_and_keys): stress test of the configuration
	database access API
	(list_all_providers): test providers' info retrieval API

	* gda-test.h: new file

2001-11-02  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: removed non-existant _PROGRAMS, and fixed
	s/GDA_CLIENT_/LIBGDA_

2001-10-31  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-primebase-test.c:
	* gda-sybase-test.c: